syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.socialmedia.grpc.interaction";
option java_outer_classname = "InteractionServiceProto";

package interaction;

service InteractionService {
  rpc GetPostInteractionCounts(GetPostInteractionCountsRequest) returns (GetPostInteractionCountsResponse) {}
}

message GetPostInteractionCountsRequest {
  repeated int64 post_ids = 1;
}

message PostInteractionCounts {
  int64 post_id = 1;
  int64 like_count = 2;
  int64 comment_count = 3;
}

message GetPostInteractionCountsResponse {
  repeated PostInteractionCounts counts = 1;
}
