syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.socialmedia.grpc.user";
option java_outer_classname = "UserServiceProto";

package user;

service UserService {
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse) {}
}

message GetFollowingRequest {
  string user_id = 1;
}

message UserInfo {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string profile_picture_url = 5;
}

message GetFollowingResponse {
  repeated UserInfo users = 1;
}